--- a/README.org
+++ b/README.org
@@ -6,12 +6,13 @@
 
 ** Emacs
 - [[https://git-scm.com/][Git]]
+- [[https://hunspell.github.io/][Hunspell]]
 - [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
 
 On Arch Linux, run:
 
 #+BEGIN_SRC sh
-  pacman -S git adobe-source-code-pro-fonts
+  pacman -S git hunspell hunspell-en adobe-source-code-pro-fonts
 #+END_SRC
 
 * Issues
