--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -51,11 +51,19 @@ Declare variables and functions setup by [[file:init.el][init.el]].
     :bind
     (("C-c f d" . ediff-files)
      ("C-c f b" . ediff-current-file))
+    :preface
+    (declare-function outline-show-all "outline")
+
+    (defun koek-diff/expand-outline ()
+      "Expand outline, show every heading body."
+      (when (derived-mode-p 'outline-mode) ; org is derived from outline
+        (outline-show-all)))
     :config
     (declare-function ediff-setup-windows-plain "ediff-wind")
 
     (setq ediff-window-setup-function #'ediff-setup-windows-plain)
-    (setq ediff-split-window-function #'split-window-horizontally))
+    (setq ediff-split-window-function #'split-window-horizontally)
+    (add-hook 'ediff-prepare-buffer-hook #'koek-diff/expand-outline))
 #+END_SRC
 
 ** recentf - Recent files
