--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -23,24 +23,29 @@ only mode.
 
 * Files & directories
 #+BEGIN_SRC emacs-lisp
+  (defconst koek/home-dir-kratos
+    "d:/"
+    "File name to Koekelas' home directory on Kratos.")
+
   (defconst koek/home-dir
-    (let ((kratos "d:/"))
-      (if (file-exists-p kratos)
-          kratos
-        (expand-file-name "~/")))
+    (if (file-exists-p koek/home-dir-kratos)
+        koek/home-dir-kratos
+      (expand-file-name "~/"))
     "File name to Koekelas' home directory.")
 
-  (defconst koek/documents-dir
-    (expand-file-name "20 Documenten/" koek/home-dir)
-    "File name to Koekelas' documents directory.")
-
-  (defconst koek/to-do-file
-    (expand-file-name "Varia/To Do.org" koek/documents-dir)
-    "File name to Koekelas' main to-do file.")
+  (defconst koek/org-dir
+    (expand-file-name "20 Documenten/Varia/" koek/home-dir)
+    "File name to Koekelas' org directory.")
 
   (defconst koek/projects-dir
     (expand-file-name "21 Projecten/" koek/home-dir)
     "File name to Koekelas' projects directory.")
+
+  (defconst koek/agenda-files
+    (mapcar (lambda (file-name)
+              (expand-file-name file-name koek/org-dir))
+            '("To Do.org" "Afspraken.org"))
+    "List of file names to Koekelas' static agenda files.")
 #+END_SRC
 
 * Footer
