[emacs] Refresh agenda files when refreshing agenda.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -82,6 +82,11 @@ only mode.
       (setq org-agenda-files
             (append koek/agenda-files (koek/agenda-files))))
 
+    (define-advice
+        org-agenda-redo-all
+        (:before (&rest _args) koek/update-agenda-files)
+      (koek/update-agenda-files))
+
     (define-advice org-refile (:before (&rest _args) koek/update-refile-targets)
       (koek/update-agenda-files))
     :config
