[emacs] Mark ispell-dictionary as a safe local variable.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -290,7 +290,8 @@ For the major mode, see [[*YASnippet][YASnippet]].
       ;; be set
       (when (eq system-type 'windows-nt)
         (setenv "DICTIONARY" dictionary-name))
-      (setq ispell-dictionary dictionary-name)))
+      (setq ispell-dictionary dictionary-name))
+    (put 'ispell-dictionary 'safe-local-variable #'stringp))
 #+END_SRC
 
 ** flycheck - Show syntax & style errors
